thrift/src/main/gen/com/intellij/plugins/thrift/lang/parser/ThriftParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.plugins.thrift.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.plugins.thrift.lang.lexer.ThriftTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ThriftParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Document(b, l + 1);
  }

  /* ********************************************************** */
  // SimpleBaseType TypeAnnotations?
  public static boolean BaseType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_TYPE, "<base type>");
    r = SimpleBaseType(b, l + 1);
    r = r && BaseType_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // TypeAnnotations?
  private static boolean BaseType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseType_1")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'const' FieldType DefinitionName '=' ConstValue ListSeparator?
  public static boolean Const(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Const")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONST, "<const>");
    r = consumeToken(b, "const");
    p = r; // pin = 1
    r = r && report_error_(b, FieldType(b, l + 1));
    r = p && report_error_(b, DefinitionName(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, EQUALS)) && r;
    r = p && report_error_(b, ConstValue(b, l + 1)) && r;
    r = p && Const_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ListSeparator?
  private static boolean Const_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Const_5")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' (ConstValue ListSeparator?)* ']'
  public static boolean ConstList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList")) return false;
    if (!nextTokenIs(b, LEFTBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTBRACKET);
    r = r && ConstList_1(b, l + 1);
    r = r && consumeToken(b, RIGHTBRACKET);
    exit_section_(b, m, CONST_LIST, r);
    return r;
  }

  // (ConstValue ListSeparator?)*
  private static boolean ConstList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ConstList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConstList_1", c)) break;
    }
    return true;
  }

  // ConstValue ListSeparator?
  private static boolean ConstList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConstValue(b, l + 1);
    r = r && ConstList_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ListSeparator?
  private static boolean ConstList_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList_1_0_1")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' (ConstValue ':' ConstValue ListSeparator?)* '}'
  public static boolean ConstMap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap")) return false;
    if (!nextTokenIs(b, LEFTCURLYBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTCURLYBRACE);
    r = r && ConstMap_1(b, l + 1);
    r = r && consumeToken(b, RIGHTCURLYBRACE);
    exit_section_(b, m, CONST_MAP, r);
    return r;
  }

  // (ConstValue ':' ConstValue ListSeparator?)*
  private static boolean ConstMap_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ConstMap_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConstMap_1", c)) break;
    }
    return true;
  }

  // ConstValue ':' ConstValue ListSeparator?
  private static boolean ConstMap_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConstValue(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && ConstValue(b, l + 1);
    r = r && ConstMap_1_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ListSeparator?
  private static boolean ConstMap_1_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap_1_0_3")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant | DoubleConstant | Literal | Identifier | ConstList | ConstMap
  public static boolean ConstValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_VALUE, "<const value>");
    r = IntConstant(b, l + 1);
    if (!r) r = DoubleConstant(b, l + 1);
    if (!r) r = consumeToken(b, LITERAL);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = ConstList(b, l + 1);
    if (!r) r = ConstMap(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SimpleContainerType TypeAnnotations?
  public static boolean ContainerType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContainerType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTAINER_TYPE, "<container type>");
    r = SimpleContainerType(b, l + 1);
    r = r && ContainerType_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // TypeAnnotations?
  private static boolean ContainerType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContainerType_1")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'cpp_type' Literal
  public static boolean CppType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CppType")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CPP_TYPE, "<cpp type>");
    r = consumeToken(b, "cpp_type");
    p = r; // pin = 1
    r = r && consumeToken(b, LITERAL);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean CustomType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CustomType")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CUSTOM_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean DefinitionName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefinitionName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, DEFINITION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // topLevelElement*
  static boolean Document(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Document")) return false;
    while (true) {
      int c = current_position_(b);
      if (!topLevelElement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Document", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ('+' | '-')? Number
  public static boolean DoubleConstant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoubleConstant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOUBLE_CONSTANT, "<double constant>");
    r = DoubleConstant_0(b, l + 1);
    r = r && consumeToken(b, NUMBER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('+' | '-')?
  private static boolean DoubleConstant_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoubleConstant_0")) return false;
    DoubleConstant_0_0(b, l + 1);
    return true;
  }

  // '+' | '-'
  private static boolean DoubleConstant_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoubleConstant_0_0")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    return r;
  }

  /* ********************************************************** */
  // 'enum' DefinitionName '{' enumFields '}' TypeAnnotations?
  public static boolean Enum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Enum")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM, "<enum>");
    r = consumeToken(b, "enum");
    p = r; // pin = 1
    r = r && report_error_(b, DefinitionName(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LEFTCURLYBRACE)) && r;
    r = p && report_error_(b, enumFields(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHTCURLYBRACE)) && r;
    r = p && Enum_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // TypeAnnotations?
  private static boolean Enum_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Enum_5")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'exception' DefinitionName '{' fields '}' TypeAnnotations?
  public static boolean Exception(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exception")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, EXCEPTION, "<exception>");
    r = consumeToken(b, "exception");
    p = r; // pin = 1
    r = r && report_error_(b, DefinitionName(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LEFTCURLYBRACE)) && r;
    r = p && report_error_(b, fields(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHTCURLYBRACE)) && r;
    r = p && Exception_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // TypeAnnotations?
  private static boolean Exception_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exception_5")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // FieldID? FieldReq? FieldType DefinitionName ('=' ConstValue)? XsdFieldOptions TypeAnnotations? ListSeparator?
  public static boolean Field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = Field_0(b, l + 1);
    r = r && Field_1(b, l + 1);
    r = r && FieldType(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, DefinitionName(b, l + 1));
    r = p && report_error_(b, Field_4(b, l + 1)) && r;
    r = p && report_error_(b, XsdFieldOptions(b, l + 1)) && r;
    r = p && report_error_(b, Field_6(b, l + 1)) && r;
    r = p && Field_7(b, l + 1) && r;
    exit_section_(b, l, m, r, p, ThriftParser::fieldRecovery);
    return r || p;
  }

  // FieldID?
  private static boolean Field_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_0")) return false;
    FieldID(b, l + 1);
    return true;
  }

  // FieldReq?
  private static boolean Field_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_1")) return false;
    FieldReq(b, l + 1);
    return true;
  }

  // ('=' ConstValue)?
  private static boolean Field_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_4")) return false;
    Field_4_0(b, l + 1);
    return true;
  }

  // '=' ConstValue
  private static boolean Field_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && ConstValue(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // TypeAnnotations?
  private static boolean Field_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_6")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  // ListSeparator?
  private static boolean Field_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_7")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant ':'
  public static boolean FieldID(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldID")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_ID, "<field id>");
    r = IntConstant(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'required' | 'optional'
  public static boolean FieldReq(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldReq")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_REQ, "<field req>");
    r = consumeToken(b, "required");
    if (!r) r = consumeToken(b, "optional");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BaseType | ContainerType | CustomType
  public static boolean FieldType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_TYPE, "<field type>");
    r = BaseType(b, l + 1);
    if (!r) r = ContainerType(b, l + 1);
    if (!r) r = CustomType(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'oneway'? FunctionType DefinitionName '(' fieldsWithBraceRecovery ')' Throws? TypeAnnotations?
  public static boolean Function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION, "<function>");
    r = Function_0(b, l + 1);
    r = r && FunctionType(b, l + 1);
    r = r && DefinitionName(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, consumeToken(b, LEFTBRACE));
    r = p && report_error_(b, fieldsWithBraceRecovery(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHTBRACE)) && r;
    r = p && report_error_(b, Function_6(b, l + 1)) && r;
    r = p && Function_7(b, l + 1) && r;
    exit_section_(b, l, m, r, p, ThriftParser::functionRecovery);
    return r || p;
  }

  // 'oneway'?
  private static boolean Function_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function_0")) return false;
    consumeToken(b, "oneway");
    return true;
  }

  // Throws?
  private static boolean Function_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function_6")) return false;
    Throws(b, l + 1);
    return true;
  }

  // TypeAnnotations?
  private static boolean Function_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function_7")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'void' | FieldType
  public static boolean FunctionType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_TYPE, "<function type>");
    r = consumeToken(b, "void");
    if (!r) r = FieldType(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '<' FieldType (',' FieldType)* '>'
  public static boolean GenericType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GenericType")) return false;
    if (!nextTokenIs(b, LT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, GENERIC_TYPE, null);
    r = consumeToken(b, LT);
    p = r; // pin = 1
    r = r && report_error_(b, FieldType(b, l + 1));
    r = p && report_error_(b, GenericType_2(b, l + 1)) && r;
    r = p && consumeToken(b, GT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' FieldType)*
  private static boolean GenericType_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GenericType_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!GenericType_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "GenericType_2", c)) break;
    }
    return true;
  }

  // ',' FieldType
  private static boolean GenericType_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GenericType_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && FieldType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ('include' | 'cpp_include') Literal
  public static boolean Include(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Include")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, INCLUDE, "<include>");
    r = Include_0(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, LITERAL);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // 'include' | 'cpp_include'
  private static boolean Include_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Include_0")) return false;
    boolean r;
    r = consumeToken(b, "include");
    if (!r) r = consumeToken(b, "cpp_include");
    return r;
  }

  /* ********************************************************** */
  // ('+' | '-')? Integer
  public static boolean IntConstant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntConstant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INT_CONSTANT, "<int constant>");
    r = IntConstant_0(b, l + 1);
    r = r && consumeToken(b, INTEGER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('+' | '-')?
  private static boolean IntConstant_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntConstant_0")) return false;
    IntConstant_0_0(b, l + 1);
    return true;
  }

  // '+' | '-'
  private static boolean IntConstant_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntConstant_0_0")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    return r;
  }

  /* ********************************************************** */
  // ',' | ';'
  public static boolean ListSeparator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListSeparator")) return false;
    if (!nextTokenIs(b, "<list separator>", COMMA, SEMICOLON)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LIST_SEPARATOR, "<list separator>");
    r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'list' GenericType CppType?
  public static boolean ListType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListType")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LIST_TYPE, "<list type>");
    r = consumeToken(b, "list");
    p = r; // pin = 1
    r = r && report_error_(b, GenericType(b, l + 1));
    r = p && ListType_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // CppType?
  private static boolean ListType_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListType_2")) return false;
    CppType(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'map' CppType? GenericType
  public static boolean MapType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MapType")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, MAP_TYPE, "<map type>");
    r = consumeToken(b, "map");
    p = r; // pin = 1
    r = r && report_error_(b, MapType_1(b, l + 1));
    r = p && GenericType(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // CppType?
  private static boolean MapType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MapType_1")) return false;
    CppType(b, l + 1);
    return true;
  }
